修复托盘图标不显示的问题

--- a/DesktopSnow/DesktopSnow.csproj
+++ b/DesktopSnow/DesktopSnow.csproj
@@ -11,7 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Resource Include="snow.ico" />
+    <Content Include="snow.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="MainWindow.xaml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
   </ItemGroup>
 
 </Project>
