修复开机自启动后托盘图标不显示的问题

--- a/DesktopSnow/DesktopSnow.csproj
+++ b/DesktopSnow/DesktopSnow.csproj
@@ -8,6 +8,7 @@
     <UseWPF>true</UseWPF>
 	<UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>snow.ico</ApplicationIcon>
+	<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
